...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/modSpinner"
        android:layout_width="143dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
        app:layout_constraintEnd_toEndOf="@id/resetBtn"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

...
